--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
   },
   "devDependencies": {
     "@dfinity/agent": "0.7.1",
-    "css-loader": "^3.6.0",
+    "buffer": "6.0.3",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^5.2.0",
+    "html-webpack-plugin": "^5.2.0",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^4.2.2",
-    "webpack": "4.41.3",
-    "webpack-cli": "3.3.10"
+    "ts-loader": "^8.1.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
+    "webpack": "5.24.4",
+    "webpack-cli": "4.5.0"
   }
 }
