Limit www canister to just ads_ledger canister
Candid UI by default connects to any canister specified by the `id` GET
variable. Since this instance of the canister is meant to be
single-purpose, it would make sense to access that canister by default
and remove the option to switch.

Along with that, some changes to replace "Candid UI" with "Ethical
Targeting", just to emphasize what exactly is being accessed here.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,11 @@
     "lib": ["dom", "es2017"],
     "module": "commonjs",
     "outDir": "ts-out/",
+    "resolveJsonModule": true,
     "sourceMap": true,
     "strict": true,
     "target": "ES2017"
   },
-  "include": ["src/**/*.ts", "src/**/*.css"],
+  "include": ["src/**/*.ts", "src/**/*.css", "canister_ids.json"],
   "exclude": ["**/*.test.ts"]
 }
